--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "groq-sdk": "^0.5.0",
     "leaflet": "^1.9.4",
@@ -22,6 +23,8 @@
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-grid-heatmap": "^1.3.0",
+    "react-heatmap-grid": "^0.9.0",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
