--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
